--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "reset-css": "^5.0.1",
     "sass": "^1.60.0",
+    "sass-loader": "^13.2.1",
     "styled-components": "^5.3.9",
+    "styled-reset": "^4.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
