--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react-scripts": "5.0.1",
     "reset-css": "^5.0.1",
     "sass": "^1.60.0",
-    "sass-loader": "^13.2.1",
     "styled-components": "^5.3.9",
     "styled-reset": "^4.4.5",
     "web-vitals": "^2.1.4"
@@ -41,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.3",
+    "node-sass": "^7.0.3",
+    "sass-loader": "^13.2.1",
+    "style-loader": "^3.3.2"
   }
 }
