--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node,react,visualstudiocode,macos,git
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,react,visualstudiocode,macos,git
 
+build
 ### Git ###
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
